--- a/src/index.html
+++ b/src/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <title>Chessop</title>
   </head>
-  <body>
+  <body class="font-sans h-full">
     <div id="app">
     </div>
   </body>
